--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
 
-<div id="page">
-  <div class="login-page">
-    <h1>AVON Dashboard</h1>
-    <p>Login with Discord to continue</p>
-    <a class="discord-btn" href="/auth/discord">
-      Login with Discord
-    </a>
-  </div>
-</div>
+<div id="page"></div>
 
 <script src="/app.js"></script>
 </body>
